fixed spacing
px —> %

--- a/robots/style.css
+++ b/robots/style.css
@@ -142,7 +142,7 @@ p{
 
 #page{
 	float:left;
-	width:45%;
+	width:60%;
 	margin-top:30px;
 }
 
@@ -151,7 +151,7 @@ p{
 	padding:10px;
 	width:25%;
 	margin-top:30px;
-	margin-left:120px;
+	margin-left:10%;
 }
 
 #sidebar li{
@@ -165,7 +165,7 @@ p{
 
 #content-wrapper{
 	overflow: auto;
-	height: 680px;
+	height: auto;
 }
 
 
